# axum-saas-template

./: .dockerignore  .env.example  .gitignore  Caddyfile  Cargo.toml  Dockerfile  LICENSE  build.sh  db.sh  docker-compose.yml  entrypoint.sh  package-lock.json  package.json  readme.md  tailwind.config.js
assets/css/: main.css
migrations/: 1_setup.sql  2_table.sql
src/: config.rs  main.rs
src/http/: error.rs  mod.rs
src/http/controllers/: auth.rs
src/http/database/: mod.rs  session.rs  user.rs
src/http/middleware/: middleware.rs
src/http/models/: auth.rs  email.rs  mod.rs  session.rs  user.rs
src/http/services/: email.rs
src/http/utils/: extractor.rs  mod.rs  password.rs  response_wrapper.rs  token_generator.rs
src/http/view/: mod.rs
templates/: heading.html  home.html  root.html
templates/components/: navbar.html
